# Fc-deconvolute

./: .gitignore  README.md  bootstrap-test.ipynb  compare_x.ipynb  emceeNotebook.ipynb  emceeadcc.py  emceerecp.py  emceetest.ipynb  emceetest.py  fig2data.ipynb  genFigure.py  makefile  manuscript.docx  manuscript.html  manuscript.md  pyproject.toml  requirements.txt  testNB.ipynb  testNotebook.ipynb  testNotebook2.ipynb  testfile.txt  testnote.ipynb  variables.json
.github/workflows/: build.yml  coveragerc  pytest.yml
data/: fimmu-08-00877.csv
deconv/: emceeDeconv.py  import.py  imports.py  pca.py
deconv/data/: Fig2A-FcgRI.csv  Fig2A.csv  Fig2B-FcgRIIa-131H.csv  Fig2B.csv  Fig2C-FcgRIIa-131R.csv  Fig2C.csv  Fig2D-FcgRIIb.csv  Fig2D-FcgRIIbc.csv  Fig2D.csv  Fig2E-FcgRIIIa-158F.csv  Fig2E.csv  Fig2F-FcgRIIIa-158V.csv  Fig2F.csv  Fig2G-FcgRIIIb-NA1.csv  Fig2G.csv  Fig2H-FcgRIIIb-NA2.csv  Fig2H.csv  anti-D.csv  anti-TNP.csv  dekkers.csv  fig3a.csv  fig3b.csv  fig4a c1q.csv  fig4b c4.csv
deconv/figures/: common.py  figure1.py  figure10.py  figure11.py  figure2.py  figure21.py  figure2b.py  figure2mod.py  figure3.py  figure3new.py  figure4.py  figure5.py  figure6.py  figure7.py  figure8.py  figure9.py  figurePlotPair.py  legend.py  nnlsPlots.ipynb
deconv/tests/: test_import.py
manuscript/: 00.front-matter.md  03.results.md  17.acknowledgements.md  metadata.yaml
