[tool.poetry]
name = "deconv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
numpyro = "^0.9.2"
arviz = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "deconv.figures.common:genFigure"
